[project]
name = "csiro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=1.7.4.5",
    "numpy>=2.3.4",
]

[project.scripts]
csiro = "csiro.cmd:main"

[tool.setuptools]
packages = ["csiro"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "ruff>=0.14.4",
    "seaborn>=0.13.2",
]
